landing page is almost done. Fixed issues with dark mode today. Tomorrow we start on the 2nd page to show more information about the flags

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,9 @@ body{
     color: hsl(200, 15%, 8%);
     background-color: hsl(0, 0%, 98%);
 }
+span p{
+    margin-left: 4px;
+}
 .navigation-bar{ 
     border-bottom: 1px solid #e5e5e5;
     padding:18px 40px 18px 40px;
@@ -56,7 +59,7 @@ body{
       }
   }
 
-.search-bar input{
+#country-search{
     width: 400px;
     padding: 15px;
     border: 1px solid #e5e5e5;
@@ -65,7 +68,7 @@ body{
 }
 
 @media screen and (max-width: 475px) {
-    .search-bar input{
+    #country-search{
         width: 250px;
         padding: 15px;
         border: 1px solid #e5e5e5;
@@ -117,6 +120,7 @@ body{
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
     background-color: white;
+    letter-spacing: .5px;
 }
 
 img {
@@ -142,6 +146,7 @@ img {
     border: 1px solid #e5e5e5;
     border-radius: 5px;
     box-shadow: 1px 1px 1.5px rgba(0, 0, 0, 0.1);
+    color: black;
   }
 ul > li{
     cursor: pointer;
@@ -169,11 +174,28 @@ ul > li{
 
   /* DARK MODE */
 
+  .dark-nav-bar{
+    background-color: hsl(209, 23%, 22%);
+    box-shadow: 0px 0px .5px rgba(0, 0, 0, 0.4);
+    border-bottom: hsl(209, 23%, 22%);
+  }
 
-    .dark-mode {
-        background-color: hsl(207, 26%, 17%);
-        color: hsl(0, 0%, 100%);
-      }
+  .dark-mode-search {
+    background-color: hsl(209, 23%, 22%);
+    color: white;
+    border: 1px solid hsl(209, 23%, 22%) !important;
+    box-shadow: 2px 2px 2.5px rgba(0, 0, 0, 0.5);
+}
+    .dark-mode-search::placeholder{
+        color: white;
+    }
+
+
+  .dark-mode {
+    background-color: hsl(207, 26%, 17%);
+    color: hsl(0, 0%, 100%);
+}
+
 
     .dark-mode-elements{
        background-color: hsl(209, 23%, 22%);
@@ -184,14 +206,20 @@ ul > li{
         display: none;
         justify-content: center;
         align-items: center;
+        cursor: pointer;
 
     }
     .toggle-dark-mode{
         display: flex;
         justify-content: center;
         align-items: center;
+        cursor: pointer;
     }
 
     .hidden {
         display: none;
+    }
+
+    .dark-light-margin{
+        margin-left: 10px;
     }
